--- a/app/views/end_users/cart_items/index.html.erb
+++ b/app/views/end_users/cart_items/index.html.erb
@@ -4,6 +4,7 @@
 		<div class="empty-cart">
 			<%= link_to "カートを空にする",end_users_cart_items_empty_cart_path %>
 		</div>
+
 		<table>
 			<thead>
 				<tr>
@@ -16,37 +17,29 @@
 			</thead>
 
 			<tbody>
-				<% @sum = 0 %>
 				<% @cart_items.each do |cart_item| %>
 				<tr>
 					<td>
 						<%= cart_item.item.name %>
 					</td>
 					<td>
-						<%= cart_item.item.price %>
+						 ¥ <%= cart_item.item.price %>
 					</td>
 					<td>
 
 						<%= form_for(cart_item, url:end_users_cart_item_path(cart_item),method: :patch) do |f| %>
-						<%= cart_item.quantity %>
+						<% cart_item.quantity %>
 						<%= f.number_field :quantity %>
 						<%= f.submit "変更する" %>
 						<% end %>
-
-
-
-
 					</td>
 					<td>
-						<%= cart_item.item.price * cart_item.quantity %>
+						¥ <%= cart_item.item.price * cart_item.quantity %>
 					</td>
 					<td>
-
 						<%= link_to "削除", end_users_cart_item_path(cart_item), method: :delete %>
-
 					</td>
 				</tr>
-				<%= @sum += cart_item.item.price * cart_item.quantity %>
 				<% end %>
 			</tbody>
 		</table>
@@ -55,19 +48,19 @@
 			<tbody>
 				<tr>
 					<td>
-						合計金額
+						合計金額 ¥ <%= @sum %>
 					</td>
 					<td>
-						<%= @sum %>
 					</td>
 				</tr>
 			</tbody>
 		</table>
-	</div>
 
+		<%= link_to "買い物を続ける", end_users_items_path %>
+
+		<%= link_to "情報入力に進む", new_end_users_order_path %>
+
+	</div>
 </div>
 
-<%= link_to "買い物を続ける", end_users_items_path %>
-
-<%= link_to "情報入力に進む", new_end_users_order_path %>
 
