--- a/app/views/end_users/homes/top.html.erb
+++ b/app/views/end_users/homes/top.html.erb
@@ -10,7 +10,8 @@
 				<tbody>
 					<% @genres.each do |genre| %>
 					<tr>
-						<td><%= link_to genre.name,end_users_path(genre.id),class: "genre" , :style => "margin:8px; width:50%; text-align:center; text-decoration:none; color:white;" %>
+						<td>
+							<%= link_to genre.name,end_users_path(genre.id),class: "genre" , :style => "margin:8px; width:50%; text-align:center; text-decoration:none; color:white;" %>
 						</td>
 					</tr>
 					<% end %>
@@ -31,3 +32,4 @@
 		</div>
 	</div>
 </body>
+
